<resources>
    <string name="app_name">covid_help_family</string>
    <string name="name">CovidHelp</string>
    <string name="name1">Family</string>
    <string name="name2">Covid Help Family</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="error">Error</string>
    <string name="patient_name">Patient Name</string>
    <string name="spo2">SPO2</string>
    <string name="pulse">PULSE</string>
</resources>