<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:isScrollContainer="true"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="80dp"
                android:textSize="20sp"
                android:fontFamily="@font/open_sans_extrabold"
                android:textAllCaps="true"
                android:textColor="@color/accent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/name2" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/appName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:fontFamily="@font/open_sans_extrabold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/login"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                app:startIconDrawable="@drawable/email_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Email address"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/loginText"
                app:layout_constraintStart_toStartOf="parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/passwordVisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintTop_toTopOf="@id/password"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="@id/password"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                app:srcCompat="@drawable/ic_eye_open"
                android:padding="0dp"
                />

            <ImageButton
                android:id="@+id/passwordInvisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintTop_toTopOf="@id/password"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="@id/password"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                app:srcCompat="@drawable/ic_eye_off"
                android:padding="0dp"
                android:visibility="invisible"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:boxBackgroundMode="outline"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/password_icon"
                android:layout_marginHorizontal="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:helperTextEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/accent"
                android:fontFamily="@font/open_sans_extrabold"
                android:paddingVertical="10dp"
                android:text="@string/signin"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/password"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signInBtn"
                android:layout_marginTop="50dp"
                android:textColor="@color/clrError"
                android:text="@string/error"
                android:textSize="18sp"
                android:visibility="invisible"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/emailLoginProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@id/errorText"
                app:layout_constraintStart_toStartOf="@id/errorText"
                app:layout_constraintEnd_toEndOf="@id/errorText"
                app:layout_constraintBottom_toBottomOf="@id/errorText"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
